[gd_scene load_steps=44 format=4 uid="uid://c2bso81u5xov"]

[ext_resource type="Script" uid="uid://buo0k0a1ucb80" path="res://scripts/controller.gd" id="1_lbhrr"]
[ext_resource type="FontFile" uid="uid://b7majbdgh2of0" path="res://assets/fonts/Minecraftia-Regular.ttf" id="2_kvpfn"]
[ext_resource type="Material" uid="uid://na807rdmihep" path="res://assets/shaders/sine.tres" id="3_dinhu"]
[ext_resource type="Texture2D" uid="uid://yuoce8fhr0w0" path="res://assets/isometric-sandbox-sheet.png" id="3_p57ef"]
[ext_resource type="Shader" uid="uid://gsi3gl42edff" path="res://assets/shaders/sine.gdshader" id="4_dinhu"]
[ext_resource type="Script" uid="uid://chhdq05d72ddm" path="res://scripts/source.gd" id="4_u5sy4"]
[ext_resource type="Script" uid="uid://nsybol5vh4m7" path="res://scripts/filter.gd" id="5_iywne"]
[ext_resource type="Script" uid="uid://4kueu8k0s2jv" path="res://scripts/sensor.gd" id="6_p57ef"]
[ext_resource type="Texture2D" uid="uid://bkrv3exiay8ac" path="res://assets/object_sprites/filter.png" id="6_vtaks"]
[ext_resource type="Texture2D" uid="uid://bsjkegad250wb" path="res://assets/object_sprites/sensor_DOWN_RIGHT.png" id="7_kvpfn"]
[ext_resource type="Script" uid="uid://ccipymiuceyxj" path="res://scripts/camera.gd" id="7_u5sy4"]
[ext_resource type="Texture2D" uid="uid://kum6enib4nis" path="res://assets/object_sprites/source_DOWN_RIGHT.png" id="9_dinhu"]

[sub_resource type="LabelSettings" id="LabelSettings_p57ef"]
line_spacing = 0.0
font = ExtResource("2_kvpfn")
font_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvpfn"]
bg_color = Color(0.792157, 0.776471, 0.745098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.360784, 0.376471, 0.305882, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_dinhu"]
Label/colors/font_color = Color(0.360784, 0.376471, 0.305882, 1)
Label/font_sizes/font_size = 8
Label/fonts/font = ExtResource("2_kvpfn")
Panel/styles/panel = SubResource("StyleBoxFlat_kvpfn")

[sub_resource type="PlaneMesh" id="PlaneMesh_p57ef"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_0tnpc"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p57ef"]
render_priority = 0
shader = ExtResource("4_dinhu")
shader_parameter/wavelength = 0.443
shader_parameter/speed = 10.0
shader_parameter/pixel_thickness = 0.5
shader_parameter/connector_n = 4

[sub_resource type="PlaneMesh" id="PlaneMesh_u5sy4"]
material = SubResource("ShaderMaterial_p57ef")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_vtaks"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_dinhu"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_trtic"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_ca42v"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_ssvqc"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_1kice"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_37s47"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_e1j6l"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_bhx41"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_sww3w"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_sgl2t"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_wljb1"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_js0lu"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_twgab"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_nepv3"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_m4url"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_pr1ej"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_0sl42"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_458eo"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_fedci"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_rm0al"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="PlaneMesh" id="PlaneMesh_pf7vy"]
material = ExtResource("3_dinhu")
size = Vector2(0.443, 0.443)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e2o6t"]
texture = ExtResource("3_p57ef")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0
1:0/0 = 0
2:0/0 = 0
3:1/0 = 0
1:1/0 = 0
2:1/0 = 0
2:2/0 = 0
3:2/0 = 0
3:3/0 = 0
4:3/0 = 0
3:0/0 = 0
4:0/0 = 0
4:1/0 = 0
5:1/0 = 0
5:2/0 = 0
5:0/0 = 0
4:2/0 = 0
1:2/0 = 0
0:4/0 = 0
1:3/0 = 0
1:4/0 = 0
2:3/0 = 0
2:4/0 = 0
0:5/0 = 0
0:6/0 = 0
0:7/0 = 0
1:5/0 = 0
1:6/0 = 0
1:7/0 = 0
2:5/0 = 0
2:6/0 = 0
2:7/0 = 0
3:4/0 = 0
3:5/0 = 0
3:6/0 = 0
3:7/0 = 0
4:4/0 = 0
4:5/0 = 0
4:6/0 = 0
4:7/0 = 0
5:3/0 = 0
5:4/0 = 0
5:5/0 = 0
5:6/0 = 0
5:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0

[sub_resource type="TileSet" id="TileSet_feb5d"]
tile_shape = 1
tile_layout = 5
tile_offset_axis = 1
tile_size = Vector2i(32, 16)
sources/0 = SubResource("TileSetAtlasSource_e2o6t")

[node name="Root" type="Node2D"]
script = ExtResource("1_lbhrr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SensorReadout" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 8.0
offset_right = 168.0
offset_bottom = 48.0
text = "Test"
label_settings = SubResource("LabelSettings_p57ef")

[node name="HoverReadout" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -168.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 48.0
label_settings = SubResource("LabelSettings_p57ef")
horizontal_alignment = 2

[node name="FilterDialog" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -72.0
offset_right = 160.0
offset_bottom = -8.0
grow_vertical = 0
theme = SubResource("Theme_dinhu")

[node name="Panel" type="Panel" parent="CanvasLayer/FilterDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/FilterDialog"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CanvasLayer/FilterDialog/VBox"]
layout_mode = 2
text = "Polarization"
horizontal_alignment = 1

[node name="Slider" type="HSlider" parent="CanvasLayer/FilterDialog/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 179.0
rounded = true
tick_count = 7

[node name="Value" type="Label" parent="CanvasLayer/FilterDialog/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="SubViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(160, 160)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
transform = Transform3D(0.707107, -0.353553, 0.612373, 0, 0.866026, 0.499999, -0.707107, -0.353553, 0.612373, 4.06186, 3.5, 4.06186)
projection = 1
current = true
size = 3.0

[node name="0 0" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.284, 1.228, 0.428)
mesh = SubResource("PlaneMesh_p57ef")

[node name="0 1" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.856, 1.228, 0)
instance_shader_parameters/wave_color = Color(1, 1, 0, 1)
mesh = SubResource("PlaneMesh_0tnpc")

[node name="0 2" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.428, 1.228, -0.428)
mesh = SubResource("PlaneMesh_u5sy4")

[node name="0 3" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.228, -0.856)
mesh = SubResource("PlaneMesh_vtaks")

[node name="0 4" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.428, 1.228, -1.284)
mesh = SubResource("PlaneMesh_dinhu")

[node name="1 0" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07, 0.704, 0.642)
mesh = SubResource("PlaneMesh_trtic")

[node name="1 1" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.642, 0.704, 0.214)
mesh = SubResource("PlaneMesh_ca42v")

[node name="1 2" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.214, 0.704, -0.214)
mesh = SubResource("PlaneMesh_ssvqc")

[node name="1 3" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.214, 0.704, -0.642)
mesh = SubResource("PlaneMesh_1kice")

[node name="1 4" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.642, 0.704, -1.07)
mesh = SubResource("PlaneMesh_37s47")

[node name="2 0" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.856, 0.18, 0.856)
mesh = SubResource("PlaneMesh_e1j6l")

[node name="2 1" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.428, 0.18, 0.428)
mesh = SubResource("PlaneMesh_bhx41")

[node name="2 2" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.18, 0)
mesh = SubResource("PlaneMesh_sww3w")

[node name="2 3" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.428, 0.18, -0.428)
mesh = SubResource("PlaneMesh_sgl2t")

[node name="2 4" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.856, 0.18, -0.856)
mesh = SubResource("PlaneMesh_wljb1")

[node name="3 0" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.642, -0.344, 1.07)
mesh = SubResource("PlaneMesh_js0lu")

[node name="3 1" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.214, -0.344, 0.642)
mesh = SubResource("PlaneMesh_twgab")

[node name="3 2" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.214, -0.344, 0.214)
mesh = SubResource("PlaneMesh_nepv3")

[node name="3 3" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.642, -0.344, -0.214)
mesh = SubResource("PlaneMesh_m4url")

[node name="3 4" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.07, -0.344, -0.642)
mesh = SubResource("PlaneMesh_pr1ej")

[node name="4 0" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.428, -0.868, 1.284)
mesh = SubResource("PlaneMesh_0sl42")

[node name="4 1" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.868, 0.856)
mesh = SubResource("PlaneMesh_458eo")

[node name="4 2" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.428, -0.868, 0.428)
mesh = SubResource("PlaneMesh_fedci")

[node name="4 3" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.856, -0.868, 0)
mesh = SubResource("PlaneMesh_rm0al")

[node name="4 4" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.284, -0.868, -0.428)
mesh = SubResource("PlaneMesh_pf7vy")

[node name="GroundTiles" type="TileMapLayer" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(160, 88)
tile_map_data = PackedByteArray("AAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD9//3/AAAAAAAAAAD9//7/AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAD9/wMAAAAAAAAAAAD9/wQAAAAAAAAAAAD+//3/AAAAAAAAAAD+//7/AAAAAAAAAAD+////AAAAAAAAAAD+/wAAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wQAAAAAAAAAAAD///3/AAAAAAAAAAD///7/AAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAABAP3/AAAAAAAAAAABAP7/AAAAAAAAAAABAP//AAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAACAP3/AAAAAAAAAAACAP7/AAAAAAAAAAACAP//AAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAADAP3/AAAAAAAAAAADAP7/AAAAAAAAAAADAP//AAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAD7//z/AAAAAAAAAAD7//3/AAAAAAAAAAD7//7/AAAAAAAAAAD7////AAAAAAAAAAD7/wAAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wQAAAAAAAAAAAD8//z/AAAAAAAAAAD9//z/AAAAAAAAAAD+//z/AAAAAAAAAAD///z/AAAAAAAAAAAAAPz/AAAAAAAAAAABAPz/AAAAAAAAAAACAPz/AAAAAAAAAAADAPz/AAAAAAAAAAA=")
tile_set = SubResource("TileSet_feb5d")

[node name="ObjectTiles" type="TileMapLayer" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(160, 88)
tile_set = SubResource("TileSet_feb5d")

[node name="Source" type="Sprite2D" parent="ObjectTiles"]
position = Vector2(-48, -40)
texture = ExtResource("9_dinhu")
script = ExtResource("4_u5sy4")
dir = 1
intensity = 1

[node name="Filter2" type="Sprite2D" parent="ObjectTiles"]
position = Vector2(0, -16)
texture = ExtResource("6_vtaks")
script = ExtResource("5_iywne")
dir = 1
polar = 90

[node name="Sensor" type="Sprite2D" parent="ObjectTiles"]
position = Vector2(48, 8)
texture = ExtResource("7_kvpfn")
script = ExtResource("6_p57ef")
dir = 1

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(160, 90)
script = ExtResource("7_u5sy4")
